[bdist_wheel]
universal = 1

[metadata]
name = bout_runners
project = CELMA-project
version = attr: bout_runners.__version__
license = GNU Lesser General Public License v3 or later (LGPLv3+)
license_file = LICENSE
description = Manage your BOUT++ runs through python
long_description = file: README.rst
author = Michael Løiten
author_email = michael.l.magnussen@gmail.com
maintainer = Michael Løiten
maintainer_email = michael.l.magnussen@gmail.com
url = https://github.com/CELMA-project/bout_runners
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Physics
    Topic :: System :: Distributed computing

[mypy]
# Be strict
disallow_untyped_calls=True
warn_return_any=True
strict_optional=True
warn_no_return=True
warn_redundant_casts=True
warn_unused_ignores=True

[mypy-docs.source.*]
# Ignore errors in the docs
ignore_errors = True

[flake8]
max-line-length = 88
extend-ignore = E203, W503
docstring-convention = numpy

[pylint]
load-plugins = pylint.extensions.docparams, pylint.extensions.docstyle, pylint.extensions.mccabe
max-line-length = 88
disable = C0330, C0326, C0199, C0411
accept-no-param-doc = no
accept-no-raise-doc = no
accept-no-return-doc = no
accept-no-yields-doc = no
default-docstring-type = numpy
